add implementation of models

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url = jdbc:postgresql://localhost:5432/githubreports
+spring.datasource.username = githubreports
+spring.datasource.password = root
+##could be update
+spring.jpa.hibernate.ddl-auto = update
