--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url = jdbc:postgresql://localhost:5432/githubreports
 spring.datasource.username = githubreports
 spring.datasource.password = root
 ##could be update
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
