--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/githubreports
-spring.datasource.username = githubreports
-spring.datasource.password = root
-##could be update
-spring.jpa.hibernate.ddl-auto = create
+my.secret=Secret
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create
