--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'cz.cvut.fit.sp1'
-version = '0.1.0'
+version = '0.2.0-SNAPSHOT'
 sourceCompatibility = '17'
 
 configurations {
