--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,28 @@
 stages:
   - build
+  - test
+
+services:
+  - postgres:14
+
+variables:
+  POSTGRES_DB: "postgres"
+  POSTGRES_USER: "postgres"
+  POSTGRES_PASSWORD: "password"
 
 build:
   image: amazoncorretto:17-alpine
   stage: build
-  script:
+  before_script:
     - chmod +x gradlew
+  script:
     - ./gradlew assemble
+
+test:
+  image: amazoncorretto:17-alpine
+  stage: test
+  before_script:
+    - chmod +x gradlew
+    - mv ci/application.properties src/test/resources/application.properties
+  script:
+    - ./gradlew test
