adding openapi generator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 my.secret=Secret
 expiration.time.access=1200000000
 expiration.time.refresh=86400000
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/githubreports
 spring.datasource.username=postgres
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=create
