--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 my.secret=Secret
 expiration.time.access=1200000
 expiration.time.refresh=86400000
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/githubreports
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create
