--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+src/main/java/cz/cvut/fit/sp1/githubreports/api/generated
 
 ### STS ###
 .apt_generated
