Add 2 dependencies in build.gradle. Fix operationID in specification.yaml and write some examples.

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.auth0:java-jwt:3.19.1'
 	implementation 'org.kohsuke:github-api:1.306'
-//	implementation 'org.flywaydb:flyway-core'
+	implementation 'io.swagger.core.v3:swagger-core:2.2.2'
+	implementation 'org.openapitools:jackson-databind-nullable:0.2.0'
+//  implementation 'org.flywaydb:flyway-core'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
